[gd_scene load_steps=2 format=3 uid="uid://ccmihpcvk2n0a"]

[ext_resource type="Script" path="res://options.gd" id="1_c5f4r"]

[node name="Options" type="Node2D"]
script = ExtResource("1_c5f4r")

[node name="Size" type="HSlider" parent="."]
offset_left = 432.0
offset_top = 232.0
offset_right = 720.0
offset_bottom = 248.0
min_value = 3.0
max_value = 8.0
value = 3.0

[node name="Win condition" type="HSlider" parent="."]
offset_left = 432.0
offset_top = 360.0
offset_right = 720.0
offset_bottom = 376.0
min_value = 3.0
max_value = 3.0
value = 3.0

[node name="Label Win" type="Label" parent="."]
offset_left = 440.0
offset_top = 280.0
offset_right = 712.0
offset_bottom = 335.0
theme_override_font_sizes/font_size = 29
text = "Win condition: 3"
horizontal_alignment = 1

[node name="Label Size" type="Label" parent="."]
offset_left = 440.0
offset_top = 160.0
offset_right = 712.0
offset_bottom = 215.0
theme_override_font_sizes/font_size = 35
text = "Size: 3"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 440.0
offset_top = 64.0
offset_right = 712.0
offset_bottom = 119.0
theme_override_font_sizes/font_size = 35
text = "Options"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 488.0
offset_top = 448.0
offset_right = 664.0
offset_bottom = 528.0
text = "Done"

[connection signal="drag_ended" from="Size" to="." method="_on_size_drag_ended"]
[connection signal="drag_ended" from="Win condition" to="." method="_on_win_condition_drag_ended"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
